# recipes

./: .gitignore  LICENSE  README.md  better_test_package.py  browser_test_package.py  build_all_helper.py  build_and_test.sh  build_packages.sh  build_recipes_with_changes.py  builder.py  bump_recipes_versions.py  bump_recipes_versions_and_create_pr.py  ci_env.yml  ci_env_old.yml  conda_build_config.yaml  determine_versions.py  empack_config.yaml  get_latest_conda_package.py  get_latest_micromamba.py  get_pkg_name.py  mkdocs.yml  oras.py  package_platforms.json  packages.json  pixi.toml  plain_py_package_test.js  pull_packages.py  rattler_conda_build_config.yaml  source.sh  test_package.sh  tickbot.yml  upload_packages.py  upload_packges.py  variant.yaml  variant_config.yaml  variant_custom.yaml
.github/: copilot-instructions.md  pull_request_template.md  run_with_pixi.yaml
.github/workflows/: .condarc  .condarc_post  bootstrap_python.yml  bootstraped_build_recipes.yaml  build_all.yaml  build_better.yaml  build_changed_recipes.yaml  build_docs.yaml  build_minimal.yaml  build_pr.yaml  build_py.yaml  build_recipes.yaml  build_simple.yaml  build_simple_new.yaml  ci_env.yml  copilot-setup-steps.yml  debug_recipes.yaml  delete_package.py  delete_package.yaml  lint_recipes.yaml  missing_packages.yaml  new_versions.yaml  new_versions_v2.yaml  on_compiler_changes.yaml  run_with_pixi.yaml  update_matplotlib_fontcache.yaml
CLI11/: bld.bat  build.sh  recipe.yaml
bitfurnace/: recipe.yaml
bzip2/: CMakeLists.txt  bld.bat
docs/: README.md  adding_packages.md  hosting.md  index.md  local_builds.md
docs/blog/: .authors.yml
docs/development/: adding_packages.md  code_of_conduct.md  conda_build_config.md  local_builds.md  recipe_format.md  troubleshooting.md
docs/project/: credits.md  faq.md  related_projects.md
docs/usage/: installing_packages.md  jupyterlite.md  pacakge_server.md  package_server.md
emci/: __main__.py  constants.py  find_recipes_with_changes.py  git_utils.py  rattler_build.py  schema.py  upload.py
emci/bot/: build_missing_recipes.py  bump_recipes_versions.py  hash_url.py  next_version.py  recipes_from_pyodide.py  update_matplotlib_fontcache.py  url_exists.py
emci/deprecated/: boa_build.py
emci/generate/: __init__.py  cran.py  generate.py  utils.py
emci/testing/: package_testing.py  test_empack_config.py
emscripten_emscripten-32/: activate.sh
emsdk/: setup_emsdk.sh
emsdk/patches/: 0001-Add-back-fs.findObject-and-fs.readFile-in-loadLibDat.patch  0001-Add-useful-error-when-symbol-resolution-fails.patch
libffi/: recipe.yaml
lua/: build.sh  liblua.so.patch
lzo/: meta.yaml  recipe.yaml
python/: recipe.yaml
recipes/astropy/: recipe.yaml
recipes/atomicwrites/: build.sh  recipe.yaml  test_import_atomicwrites.py
recipes/autograd/: recipe.yaml
recipes/biopython/: recipe.yaml  test_import_biopython.py
recipes/boost-histogram/: recipe.yaml
recipes/brotli/: recipe.yaml
recipes/bzip2/: CMakeLists.txt  recipe.yaml
recipes/cffi/: recipe.yaml  test_cffi.py
recipes/cftime/: recipe.yaml  test_cftime.py
recipes/cross-python_emscripten-32/: activate-cross-python.sh  build.sh  recipe.yaml
recipes/cryptography/: recipe.yaml
recipes/cytoolz/: recipe.yaml
recipes/distutils/: recipe.yaml
recipes/embind11/: build.sh  recipe.yaml
recipes/embind11_node/: build.sh  recipe.yaml
recipes/emboa/: recipe.yaml
recipes/emscripten_emscripten-32/: activate.sh  build.sh  deactivate.sh  recipe.yaml
recipes/endf/: build.sh  meta.yaml  recipe.yaml
recipes/experimental_python/: conda.config.site-wasm32-emscripten  recipe.yaml
recipes/freesasa/: recipe.yaml
recipes/future/: recipe.yaml
recipes/imageio/: recipe.yaml  test_import_imageio.py
recipes/ipython/: build.sh  recipe.yaml
recipes/ipywidgets/: recipe.yaml
recipes/jedi/: recipe.yaml  test_import_jedi.py
recipes/kiwisolver/: recipe.yaml
recipes/libffi/: recipe.yaml
recipes/libiconv/: build.sh  recipe.yaml
recipes/libsolv/: build.sh  conda_variant_priorization.patch  recipe.yaml
recipes/libxml/: recipe.yaml
recipes/libyaml/: recipe.yaml
recipes/lua/: meta.yaml
recipes/lzo/: recipe.yaml
recipes/markupsafe/: recipe.yaml
recipes/matplotlib/: build.sh  recipe.yaml  test_import_matplotlib.py
recipes/mpdecimal/: recipe.yaml
recipes/msgpack/: build.sh  recipe.yaml  test_import_msgpack.py
recipes/nlopt/: recipe.yaml
site/: 404.html  index.html
sqlite/: build.sh  meta.yaml
testing/: browser_test_package.py  node_test_package.py  package_testing.py  test_empack_config.py
testing/pytest_driver/: CMakeLists.txt  pytest_driver.cpp
toy_lib/: recipe.yaml
xtl/: recipe.yaml
zlib/: recipe.yaml
(+2878 files in other folders)
